# werkanvraag

./: .env.example  README.md  compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 062e8fade188_create_jobs_table.py  6b8e0a49e55d_create_users_table.py  c0a1051a9c32_create_companies_table.py
app/: main.py  models.py  schemas.py  security.py
app/api/: main.py
app/api/routes/: companies.py  jobs.py  users.py
app/contexts/: companies.py  jobs.py  users.py
app/core/: config.py  db.py
app/tests/: companies_test.py  db.py  factory.py  jobs_test.py  security_test.py  users_test.py
requests/: create_user.http  get_users.http  login.http  token.http
